--- a/src/main/webapp/cadastro_usuario.xhtml
+++ b/src/main/webapp/cadastro_usuario.xhtml
@@ -68,6 +68,12 @@
             <p:growl id="messages" showDetail="true" />
             
             <p:toolbar>
+            	<p:toolbarGroup align="right">
+                <p:fileUpload mode="simple" skinSimple="true" label="Import" chooseIcon="pi pi-download" />
+                <p:commandButton value="Export" icon="pi pi-upload" styleClass="ui-button-help" ajax="false">
+                    <p:dataExporter type="pdf" target="dt-produtores" fileName="produtores" />
+                </p:commandButton>
+            </p:toolbarGroup>
 	            <p:toolbarGroup>
 	                <p:commandButton value="Novo" icon="pi pi-plus" actionListener="#{cadastroUsuarioController.novoCadastro}"
 	                    update=":dialogs:usuario-conteudo-dialog" oncomplete="PF('usuarioDialog').show()"
