--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -6,37 +6,28 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:p="http://primefaces.org/ui"
     template="/WEB-INF/templates/default.xhtml">
-    <ui:define name="content">
-   <div class="card">
-    <h:form>
-        <p:growl id="msgs" showDetail="true" skipDetailIfEqualsSummary="true"/>
-
-        <p:dashboard id="board" model="#{dashboardView.model}">
-            <p:ajax event="reorder" listener="#{dashboardView.handleReorder}" update="msgs"/>
-
-            <p:panel id="sports" header="Sports">
-                <h:outputText value="Sports Content"/>
-            </p:panel>
-
-            <p:panel id="finance" header="Finance">
-                <h:outputText value="Finance Content"/>
-            </p:panel>
-
-            <p:panel id="lifestyle" header="Lifestyle">
-                <h:outputText value="Lifestyle Content"/>
-            </p:panel>
-
-            <p:panel id="weather" header="Weather">
-                <h:outputText value="Weather Content"/>
-            </p:panel>
-
-            <p:panel id="politics" header="Politics">
-                <h:outputText value="Politics Content"/>
-            </p:panel>
-        </p:dashboard>
-
-        <div style="clear:both"/>
-    </h:form>
-</div>
+    <ui:define name="content"> 
+    	<div class="card">
+    		<h:form>
+    
+    			<p:growl id="msgs" showDetail="true" skipDetailIfEqualsSummary="true"/>
+        		<p:fieldset style="background-color: #4823ad; ">
+            	    <nav>
+      					<ul style="list-style: none; margin: 0; padding: 0; display: flex;">
+        					<li style="margin: 0 10px;"><a style="color: #fff; text-decoration: none;" href="#">Voltar</a></li>
+        					<li style="margin: 0 10px;"><a style="color: #fff; text-decoration: none;" href="#">Sair</a></li>
+      					</ul>
+    				</nav>
+        		</p:fieldset>
+   			</h:form>
+		</div>
+    	<div class="container">
+        	<h:form  class="login-form">
+        		<h1>Informações da Safra</h1>
+        		<p:commandButton style="background-color: #1AAD7A; border: none; padding: 10px 20px; border-radius: 5px; margin-bottom: 10px;" value = "Áreas" action = "cadastrar_area?faces-redirect=true"></p:commandButton>
+        		<p:commandButton style="background-color: #AD4B34; border: none; padding: 10px 20px; border-radius: 5px; margin-bottom: 10px;" value = "Anotações" action = "cadastro_anotacoes?faces-redirect=true"></p:commandButton>
+        		<p:commandButton style="background-color: #ADA011; border: none; padding: 10px 20px; border-radius: 5px; margin-bottom: 10px;" value = "Finanças" action = "cadastrar_financas?faces-redirect=true"></p:commandButton>
+        	</h:form>
+        </div>
     </ui:define>
 </ui:composition>
