--- a/projeto/src/main/webapp/logout.xhtml
+++ b/projeto/src/main/webapp/logout.xhtml
@@ -9,7 +9,7 @@
     xmlns:p="http://primefaces.org/ui">
     
 <h:head>
-    <title>projeto</title>
+    <title>Ivam Banhara</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </h:head>
 
@@ -20,7 +20,6 @@
 	    	<h1>Você realizou o Logout!</h1>
 
 	    	<p:commandButton value="Voltar à página de login" action="login?faces-redirect=true"/>
-	    	<p:clock displayMode="analog"/>
 
        	</p:panelGrid>
    	</h:form>
