--- a/projeto/src/main/webapp/cadastrar_area.xhtml
+++ b/projeto/src/main/webapp/cadastrar_area.xhtml
@@ -26,8 +26,9 @@
         		<p:fieldset style="background-color: #4823ad; ">
             	    <nav>
       					<ul style="list-style: none; margin: 0; padding: 0; display: flex;">
-        					<li style="margin: 0 10px;"><a style="color: #fff; text-decoration: none;" href="#">Voltar</a></li>
-        					<li style="margin: 0 10px;"><a style="color: #fff; text-decoration: none;" href="#">Sair</a></li>
+	                		<h:panelGrid columns="2">
+	                    		<h:commandButton value="Sair" action="#{loginController.logout}" style="margin: 0 10px; padding:2px; background-color: #4823ad; border:none; font-size: 1em; color: #fff; text-decoration: none;"/>
+	                		</h:panelGrid>
       					</ul>
     				</nav>
         		</p:fieldset>
@@ -38,7 +39,7 @@
     	<!-- Lembre-se que o uso de formulários só não é necessário para elementos que são estáticos (sem ação, animação, conteúdo dinâmico) -->     
         <h:form id="dialogs">
         	<p:growl id="messages"/>
-	        <p:dialog header="Nova Área" showEffect="fade" modal="true" widgetVar="areaDialog" responsive="true">   
+	        <p:dialog header="AREA" showEffect="fade" modal="true" widgetVar="areaDialog" responsive="true">   
 	            <p:outputPanel id="area-conteudo-dialog" class="ui-fluid">
 	                <p:outputPanel rendered="#{not empty cadastroAreaController.area}">
 	                	<div class="field">
