--- a/projeto/src/main/webapp/cadastrar_safra.xhtml
+++ b/projeto/src/main/webapp/cadastrar_safra.xhtml
@@ -111,6 +111,9 @@
 	            <p:column headerText="Mês de Início" sortBy="#{us.mesInicio}" filterBy="#{us.mesInicio}">
 	                <h:outputText value="#{us.mesInicio}" />
 	            </p:column>
+	            <p:column headerText="Mês de Término" sortBy="#{us.mes_termino}" filterBy="#{us.mes_termino}">
+	                <h:outputText value="#{us.mes_termino}" />
+	            </p:column>
 	
 			            <p:column>
 	            	<!-- Cuidado com botões que usam AJAX -->
