--- a/projeto/src/main/webapp/login.xhtml
+++ b/projeto/src/main/webapp/login.xhtml
@@ -23,7 +23,7 @@
         		</h:panelGrid>
              
 			  
-            <p style="margin: 0; padding: 0; display: inline-block; ">
+            <p class="pLogin">
                 <h:panelGrid columns="2">
                     <h:commandButton style="background-color: #4823AD; color: #fff; " value="Login" action="#{loginController.login}"/>
                     <h:messages styleClass="messages" errorClass="invalid" infoClass="valid" warnClass="warning" globalOnly="true" />
